--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url:         "http://grobskizziert.de"
 date_format: "%b %-d, %Y"
 
 # Google services
-google_analytics:
+google_analytics: UA-46381629-1
 google_verification:
 
 # Optional features
