--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,7 @@ title: "Grob skizziert"
 email: fveitzen@gmail.com
 author: "Frank von Eitzen"
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Wer nicht auf das Kleine schaut, scheitert am Großem.
 baseurl: ""
 url: "http://grobskizziert.de"
 date_format: "%b %-d, %Y"
